@@ -25,6 +25,7 @@ import org.junit.runners.Suite.SuiteClasses;
 
 import com.stefanbrenner.droplet.model.ConfigurationTest;
 import com.stefanbrenner.droplet.model.DeviceComperationTest;
+import com.stefanbrenner.droplet.service.impl.DropletMessageProtocolTest;
 import com.stefanbrenner.droplet.utils.PluginProviderTest;
 import com.stefanbrenner.droplet.utils.UiUtilsTest;
 
@@ -34,7 +35,8 @@ import com.stefanbrenner.droplet.utils.UiUtilsTest;
  * @author Stefan Brenner
  */
 @RunWith(Suite.class)
-@SuiteClasses({ UiUtilsTest.class, PluginProviderTest.class, DeviceComperationTest.class, ConfigurationTest.class })
+@SuiteClasses({ UiUtilsTest.class, PluginProviderTest.class, DeviceComperationTest.class, ConfigurationTest.class,
+		DropletMessageProtocolTest.class })
 public class DropletTestSuite {
 
 }
